--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7c1ae103",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "643c80dc",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Device:  cuda\n",
       "GraphModule(\n",
       "  (attn_body/transpose): OnnxTranspose()\n",
       "  (initializers): Module()\n",
@@ -2160,13 +2161,16 @@
     }
    ],
    "source": [
-    "model = torch.load(\"t3-512x15x16h-distill-swa-2767500.pth\", weights_only=False)\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print('Device: ', device)\n",
+    "\n",
+    "model = torch.load(\"t3-512x15x16h-distill-swa-2767500.pth\", weights_only=False).to(device)\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dabb781d",
    "metadata": {},
    "outputs": [
@@ -3015,7 +3019,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3023,7 +3027,63 @@
    "source": [
     "from torchinfo import summary\n",
     "\n",
-    "summary(model, input_size=(1, 112, 8, 8))"
+    "summary(model, input_size=(1, 112, 8, 8)) # input size inferred from scripts/input_size_and_architecture_details.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "35896380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "**Policy Vector**\n",
+      "torch.Size([1, 1858])\n",
+      "The move policy, a pd over all possible chess moves. It considers 1858 possible moves, here.\n",
+      "The raw values are logits that would typically be converted to probabilities via softmax. Higher is better.\n",
+      "\n",
+      "Value Head (WDL (Win/Draw/Loss))\n",
+      "torch.Size([1, 3])\n",
+      "The position evaluation in terms of game outcome probabilities. \n",
+      "The 3 values correspond to: [0]: P(Loss), [1]: P(Draw), [2]: P(Win)\n",
+      "\n",
+      "**Moves Left Head**\n",
+      "torch.Size([1, 1])\n",
+      "Predicts the number of moves left in the game. \n",
+      "It uses this to help with time management and evaluation.\n",
+      "[tensor([[ 0.8541, -0.1087, -0.3296,  ..., -0.3063, -1.4553, -1.5125]],\n",
+      "       device='cuda:0'), tensor([[0.0056, 0.0247, 0.9697]], device='cuda:0'), tensor([[7.7646]], device='cuda:0')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inference run on random data\n",
+    "\n",
+    "inputs = torch.randn(1, 112, 8, 8).to(device)\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(inputs)\n",
+    "\n",
+    "# outputs = outputs.detach().cpu().numpy()\n",
+    "print(len(outputs))\n",
+    "print(f\"**Policy Vector**\")\n",
+    "print(outputs[0].shape)\n",
+    "print(\"The move policy, a pd over all possible chess moves. It considers 1858 possible moves, here.\" \\\n",
+    "\"\\nThe raw values are logits that would typically be converted to probabilities via softmax. Higher is better.\")\n",
+    "\n",
+    "print(\"\\nValue Head (WDL (Win/Draw/Loss))\")\n",
+    "print(outputs[1].shape)\n",
+    "print(\"The position evaluation in terms of game outcome probabilities. \\n\" \\\n",
+    "\"The 3 values correspond to: [0]: P(Loss), [1]: P(Draw), [2]: P(Win)\")\n",
+    "print(\"\\n**Moves Left Head**\")\n",
+    "print(outputs[2].shape)\n",
+    "print(\"Predicts the number of moves left in the game. \\nIt uses this to help with time management and evaluation.\")\n",
+    "print(outputs)"
    ]
   }
  ],
